# pentominoes

./: .gitignore  .gitmodules  README.md  draw.py  main.py  pyproject.toml
debug/: test_cases.py  test_puzzle_nine.py  test_solver.py
formulas/: 14_14_129.cnf  3x6x8x8.cnf  4x12x10x10.cnf  4x13x10x10.cnf  5x21x12x12.cnf  5x22x12x12.cnf  5x23x12x12.cnf  5x24x12x12.cnf  6x32x14x14.cnf  6x33x14x14.cnf  6x34x14x14.cnf  7x43x16x16.cnf  7x44x16x16.cnf  7x45x16x16.cnf  7x46x16x16.cnf  7x47x16x16.cnf  8x61x18x18.cnf  8x62x18x18.cnf
formulas/tetrominoes/: 2x0x6x6.cnf  3x0x8x8.cnf  (+28 more)
models/: 10x84x15x17.txt  10x84x23x23.txt  10x85x15x17.txt  10x85x23x23.txt  10x86x15x17.txt  10x86x23x23.txt  10x87x15x17.txt  10x87x23x23.txt  10x88x15x17.txt  10x89x15x17.txt  10x90x15x17.txt  10x91x15x17.txt  10x91x20x20.txt  10x92x15x17.txt  10x93x15x17.txt  11x102x15x18.txt  11x103x15x18.txt  11x103x20x20.txt  11x104x25x25.txt  3x6x8x8.txt  4x12x10x10.txt  4x12x10x9.txt  4x13x10x10.txt  4x13x13x12.txt  5x21x12x12.txt  5x21x9x11.txt  5x22x12x12.txt  5x22x9x11.txt  5x23x12x12.txt  5x23x9x11.txt  5x24x12x12.txt  5x24x9x11.txt  6x32x12x12.txt  6x32x14x14.txt  6x33x12x12.txt  6x33x14x14.txt  6x34x12x12.txt  6x34x14x14.txt  7x43x14x12.txt  7x43x16x16.txt  (+30 more)
src/: Pentomino.py  PolyominoSolver.py  Tetromino.py  __init__.py  draw.py  encode.py  main.py  old_main.py  polyomino.py  test_cases.py  test_puzzle_nine.py  test_solver.py  upper_bounds.py  utils.py
test_draw/: input_board_pentominoes.txt  input_board_tetrominoes.txt  test_draw.py
tests/: test_draw.py  test_solver.py  test_upper_bounds.py
(+30 files in other folders)
