[project]
name = "pentominoes"
version = "0.1.0"
description = "15-816 Final Project: SAT and Pentomino Fences"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pillow",
    "psutil>=7.1.3",
    "python-sat[aiger,approxmc,pblib]",
]

[dependency-groups]
dev = ["black", "pytest"]

packages = ["src"]
